# crew_agents

./: pyproject.toml  report.md
db/: chroma.sqlite3
output_files/: task2.txt  task3.txt  task4.txt
src/file_crew/: crew.py  main.py  models.py  utils.py
src/file_crew/config/: agents.yaml  tasks.yaml
src/file_crew/output_files/: event_creation.txt  map_source_recon.txt  matching_rule.txt  recon_creator.txt  recon_field_creator.txt  recon_field_summay.txt  source_extractor.txt  source_fields_extractor.txt
src/file_crew/tools/: custom_tool.py  recon_tool.py  task_exec_tool.py
src/file_crew/uploaded_files/: TempReconR03.csv  TempSourceS03.csv  payload_dataset.csv  reconR03.csv  sample.csv  sourcessss.csv
src/file_crew/utils/: Readme.md  agent2.py  app_endpoints.json  main.py  run_agent.py
src/file_crew/utils/agents/data_agent_bot/: mapping_generation.py  process.py  request_worker.py  sending_request.py  validators.py
src/file_crew/utils/common/: config.py  constants.py  pg_client.py
src/file_crew/utils/common/templates/: engine_bots.py
src/file_crew/utils/reposority/: raw_executions.py
src/file_crew/utils/resources/: app_endpoints.json
src/file_crew/utils/schemas/: recon_model.py
src/file_crew/utils/utils/: files.py
